[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/ptero.png" type="Texture" id=1]
[ext_resource path="res://Ptero.gd" type="Script" id=2]
[ext_resource path="res://sounds/joustpte.wav" type="AudioStream" id=3]
[ext_resource path="res://PteroBird.gd" type="Script" id=4]
[ext_resource path="res://sounds/Joust_Kill.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ptero/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ptero/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ptero/Mouth/Hit:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ptero/Mouth/Hit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ptero/Body:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ptero/Body:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ptero/Body:polygon")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, -3, 6, -9, 6, -14, 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Ptero/Wing:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Ptero/Wing:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Ptero/Wing:polygon")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -8, 2, -14, -4, 0, -4, 1, 0, -2, 2 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath(".:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Ptero/Sprite:flip_h")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 1.2
step = 0.05
tracks/0/type = "audio"
tracks/0/path = NodePath("Death")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.190389,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.248087,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.392484,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.39056,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0, 0.245912, 0.5, 0.6, 0.7 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ptero/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 0.984314, 0, 0, 1 ), Color( 0.984314, 0, 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.1895 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ptero/Sprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "flying"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Ptero/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.85, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ptero/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.85, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, 4 ), Vector2( -1, 3 ), Vector2( -1, 4 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ptero/Body:scale")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.950153 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ptero/Body:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.950153 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ptero/Body:polygon")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.85, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, -3, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, 2, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -5.66667, 1, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, 2, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, 2, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, -3, 6, -9, 6, -14, 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ptero/Wing:position")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.85, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 5 ), Vector2( -3, 6 ), Vector2( -2, 5 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ptero/Wing:scale")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.85, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -0.75 ), Vector2( 1, -0.75 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Ptero/Wing:polygon")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25, 0.950153, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -8, 2, -14, -4, -10, -5, -6.66667, -3.66667, -1.33333, -2, 1, 0, -2, 2 ), PoolVector2Array( -8, 2, -14, -4, 0, -4, 1, 0, -2, 2 ), PoolVector2Array( -8, 2, -14, -4, -7, -4, 1, 0, -2, 2 ), PoolVector2Array( -8, 2, -14, -4, -9.66667, -4.66667, -6.66667, -4, 1, 0, -2, 2 ) ]
}
tracks/8/type = "audio"
tracks/8/path = NodePath("Scream")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("Ptero/Mouth/Hit:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "screech"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Ptero/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.8, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ptero/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.8, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, 4 ), Vector2( -1, 3 ), Vector2( -1, 4 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ptero/Mouth/Hit:scale")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.8, 0.95, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ), Vector2( 1, 1 ), Vector2( 1, 1.75 ), Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 0.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ptero/Mouth/Hit:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.8, 0.95, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ), Vector2( -1, 2 ), Vector2( 1, -2 ), Vector2( -1, 2 ), Vector2( 0, 1.5 ), Vector2( 0, 2.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Ptero/Body:scale")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.950153 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ptero/Body:position")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.950153 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ptero/Body:polygon")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 8, 2, 8, 4, 5, 5, -3, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -5.33333, 1.33333, -1, 2, 2, 1, 4.66667, 0.333333, 7, 1, 8, 2, 8, 4, 5, 5, -3, 6, -9, 6, -14, 4 ), PoolVector2Array( -10, 2.33333, -6, 1.66667, -1, 2, 2, 1, 3.66667, 0.333333, 6, 1, 7, 2, 7, 4, 5, 5, 2, 6, -9, 6, -14, 4 ), PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, -3, 6, -9, 6, -14, 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Ptero/Wing:position")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 5 ), Vector2( -3, 6 ), Vector2( -2, 5 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Ptero/Wing:scale")
tracks/8/interp = 0
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -0.75 ), Vector2( 1, -0.75 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Ptero/Wing:polygon")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.950153 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -8, 2, -14, -4, -10.3333, -4.66667, -7, -4, -1.66667, -2, 1, 0, -2, 2 ), PoolVector2Array( -8, 2, -14, -4, 0, -4, 1, 0, -2, 2 ), PoolVector2Array( -8, 2, -14, -4, -7, -4, 1, 0, -2, 2 ) ]
}
tracks/10/type = "audio"
tracks/10/path = NodePath("Scream")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.165218 )
}

[node name="Ptero" type="Node2D" groups=["ptero"]]
script = ExtResource( 2 )

[node name="Ptero" type="KinematicBody2D" parent="." groups=["ptero"]]
scale = Vector2( 3, 3 )
z_index = 12
collision_layer = 512
collision_mask = 11
script = ExtResource( 4 )

[node name="Body" type="CollisionPolygon2D" parent="Ptero"]
polygon = PoolVector2Array( -11, 2, -1, 2, 2, 1, 7, 1, 10, 2, 10, 4, 5, 5, -3, 6, -9, 6, -14, 4 )

[node name="Sprite" type="Sprite" parent="Ptero"]
texture = ExtResource( 1 )
hframes = 3

[node name="Wing" type="CollisionPolygon2D" parent="Ptero"]
polygon = PoolVector2Array( -8, 2, -14, -4, 0, -4, 1, 0, -2, 2 )

[node name="ForwardUp" type="RayCast2D" parent="Ptero"]
rotation = -2.0944
scale = Vector2( 0.333333, 0.333333 )
cast_to = Vector2( 0, 100 )

[node name="ForwardDown" type="RayCast2D" parent="Ptero"]
rotation = -1.0472
scale = Vector2( 0.333333, 0.333333 )
cast_to = Vector2( 0, 100 )

[node name="Mouth" type="Area2D" parent="Ptero"]
position = Vector2( -3, 0 )
collision_layer = 1024
collision_mask = 10

[node name="Hit" type="CollisionPolygon2D" parent="Ptero/Mouth"]
position = Vector2( 0, 2.5 )
scale = Vector2( 1, 0.1 )
polygon = PoolVector2Array( 7, 2, 14, -0.333333, 16, 2.33333, 14.3333, 4.66667 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/death = SubResource( 4 )
anims/flying = SubResource( 3 )
anims/screech = SubResource( 2 )

[node name="Scream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="ScreechTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ChangeTimer" type="Timer" parent="."]

[connection signal="timeout" from="ScreechTimer" to="." method="_on_ScreechTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ChangeTimer" to="Ptero" method="_on_ChangeTimer_timeout"]
